[gd_scene load_steps=6 format=3 uid="uid://bwg1cqadtouxv"]

[ext_resource type="Texture2D" uid="uid://qbtbj2oiucf7" path="res://SpriteSheets_Animations/UI_Skins/TV_Skins.png" id="1_xlgdr"]
[ext_resource type="Script" path="res://TvSkins.gd" id="2_juu7r"]
[ext_resource type="Texture2D" uid="uid://c08ceycgxgyl4" path="res://SpriteSheets_Animations/Player/Player_With_Ant.png" id="3_k2sei"]
[ext_resource type="Texture2D" uid="uid://d21p31mt4fa5o" path="res://SpriteSheets_Animations/Player/Player_Without_Ant.png" id="4_5sbts"]
[ext_resource type="Texture2D" uid="uid://ccy7t70ofvd6d" path="res://SpriteSheets_Animations/UI_Skins/Skins_Animations.png" id="5_h4si2"]

[node name="TvSkins" type="Sprite2D"]
position = Vector2(839, 987)
scale = Vector2(0.675, 0.675)
texture = ExtResource("1_xlgdr")
script = ExtResource("2_juu7r")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 82.963)
scale = Vector2(2.6, 2.6)
texture = ExtResource("3_k2sei")
hframes = 7
vframes = 7
frame = 31

[node name="Sprite2D_No_Ant" type="Sprite2D" parent="."]
position = Vector2(0, 82.963)
scale = Vector2(2.6, 2.6)
texture = ExtResource("4_5sbts")
hframes = 7
vframes = 7
frame = 31

[node name="Hats" type="Sprite2D" parent="."]
position = Vector2(0, 82.963)
scale = Vector2(2.6, 2.6)
texture = ExtResource("5_h4si2")
hframes = 7
vframes = 7

[node name="FaceI" type="Sprite2D" parent="."]
position = Vector2(0, 82.963)
scale = Vector2(2.6, 2.6)
texture = ExtResource("5_h4si2")
hframes = 7
vframes = 7
frame = 2

[node name="TV_Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 1.5
autostart = true

[connection signal="timeout" from="TV_Timer" to="." method="_on_tv_timer_timeout"]
